--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 
   <head>
     <meta charset="UTF-8" />
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/svg+xml" href="./workintech.svg" />
     <link rel="stylesheet" href="./style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,17 +13,53 @@
   </head>
 
   <body>
-    <div id="app">
+    <header>
       <div>
-        <a href="https://github.com/Workintech/fsweb-s5-bonus-challenge-html-pizza" target="_blank">
-          <img src="./workintech.svg" class="logo" alt="Workintech logo">
-        </a>
-        <h1>Hello Coder!</h1>
-        <p class="read-the-docs">
-          Click on the Workintech logo to see the Readme of the project
-        </p>
+        <img class="logo" src="public\assets\iteration-1\logo.svg" alt="logo">
+        <h2>fırsatı kaçırma</h2>
+        <h1><span>KOD ACIKTIRIR</span> Pizza, DOYURUR</h1>     
+        <a href="" class="button">ACIKTIM</a>
+      </div>
+    </header>
+    <section>
+      <div>
+        <ul class="icon-links">
+          <li><a href="#"><img src="public\assets\iteration-2\icons\1.svg" alt="icon1"><span>YENİ! Kore</span></a></li>
+          <li><a href="#"><img src="public\assets\iteration-2\icons\2.svg" alt="icon2"><span>Pizza</span></a></li>
+          <li><a href="#"><img src="public\assets\iteration-2\icons\3.svg" alt="icon3"><span>Burger</span></a></li>
+          <li><a href="#"><img src="public\assets\iteration-2\icons\4.svg" alt="icon4"><span>Kızartmalar</span></a></li>
+          <li><a href="#"><img src="public\assets\iteration-2\icons\5.svg" alt="icon5"><span>Fast Food</span></a></li>
+          <li><a href="#"><img src="public\assets\iteration-2\icons\6.svg" alt="icon6"><span>İçecekler</span></a></li>
+        </ul>
+      </div>
+    </section>
+    <section class="siparis">
+      <div class="item">
+        <img src="public\assets\iteration-2\cta\kart-1.png" alt="Büyük Menü">
+          <div class="txt">
+            <h3>Özel Menü</h3>
+            <button>Sipariş Ver</button>
+          </div>
+      </div>
+      <div class="sag">
+        <div class="item">
+        <img src="public\assets\iteration-2\cta\kart-2.png" alt="Üst Menü">
+        <div class="txt">
+        <h3>Pizza Çeşitleri</h3>
+        <button>Sipariş Ver</button>
       </div>
     </div>
+    <div class="item">
+      <img src="public\assets\iteration-2\cta\kart-3.png" alt="Alt Menü">
+      <div class="txt">
+        <h3>Burger Çeşitleri</h3>
+        <button>Sipariş Ver</button>
+      </div>
+    </div>
+  </div>
+</section>  
   </body>
+
+
 
 </html>
